构建系统的日志系统、文件操作、配置文件读取

--- a/WebServer/CMakeLists.txt
+++ b/WebServer/CMakeLists.txt
@@ -1,15 +1,21 @@
-# /CMakeLists.txt
+# CMakeLists.txt
 
-cmake_minimum_required (VERSION 3.10)
+cmake_minimum_required(VERSION 3.10)
 
 project(WebServer)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+
+# 查找其他非std库
+find_package(yaml-cpp REQUIRED)
+
+# 创建可执行文件
+add_executable(WebServer main.cpp)
 
 # 添加src目录
 add_subdirectory(src)
-#创建可执行文件
-add_executable(WebServer main.cpp)
-#链接库
-target_link_libraries(WebServer LogSystem Server)
+
+# 链接库
+target_link_libraries(WebServer LogSystem Server yaml-cpp)
